--- a/Front/deal/src/components/Products/style.scss
+++ b/Front/deal/src/components/Products/style.scss
@@ -63,7 +63,7 @@
                 z-index: 1;
                 opacity: 0;
                 position: absolute;
-                width: 512px;
+                width: 100%;
                 height: 50px;
                 background-color: black;
                 color: white;
